<resources>
    <string name="app_name">Kaguya wallpaper sama</string>
    <string name="wallpaper">WALLPAPER</string>
    <string name="wallpaper_set_2">WALLPAPER SET 2</string>
    <string name="wallpaper_set_1">WALLPAPER SET 1</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="send_feedback">SEND FEEDBACK</string>
    <string name="top">top</string>
    <string name="infinitysenseiofficial_gmail_com">infinitysenseiofficial@gmail.com</string>
    <string name="infinitysenseiofficial">InfinitySenseiOfficial</string>
    <string name="our_development_group_operates_under_the_name_infinitysenseiofficial_this_page_informs_you_of_our_policies_regarding_the_collection_use_and_disclosure_of_personal_information_we_receive_from_users_of_the_apps_we_use_your_personal_information_only_for_providing_and_improving_the_apps_by_using_our_apps_you_agree_to_the_collection_and_use_of_information_in_accordance_with_this_policy">Our development group operates under the name: InfinitySenseiOfficial. This page informs you of our policies regarding the collection, use and disclosure of Personal Information we receive from users of the Apps. We use your Personal Information only for providing and improving the Apps. By using Our Apps, you agree to the collection and use of information in accordance with this policy.</string>
    <string name="phone_stats_to_track_your_progress_in_our_apps_games_specifically_and_witch_levels_to_lock_and_unlock_we_need_permission_to_read_phone_stats_android_permission_read_phone_state_no_change_can_be_done_to_your_personal_data_no_access_can_be_granted_or_demanded_to_acceess_your_personal_data">Phone Stats To track your progress in our apps (Games specifically) and witch levels to lock and unlock we need permission to read phone stats (android.permission.READ_PHONE_STATE) no change can be done to your personal data/ no access can be granted or demanded to acceess your personal data and INTERNET is need for ads activity</string>
    <string name="contact_developer">CONTACT DEVELOPER:</string>
    <string name="email_sahilpreet907_gmail_com">Email :infinitysenseiofficial@gmail.com</string>
    <string name="privacy_policy2">Privacy Policy</string>
    <string name="enter_a_subject">enter a subject</string>
    <string name="type_in_your_message">type in your message</string>
    <string name="send_mail">send mail</string>
    <string name="todo">TODO</string>
    <string name="set_as_wallpaper">SET AS WALLPAPER</string>
    <string name="all_the_wallpapers_shows_in_the_app_are_either_in_public_domains_or_under_creative_commons_liscense_for_which_proper_attribution_is_given_to_the_respective_uploaders_no_wallpaper_is_distributed_with_our_app_if_an_image_violates_any_copyright_please_report_it_to_us_and_we_will_remove_it_from_our_database">All the wallpapers shows in the app are either in public domains or under Creative Commons liscense for which proper attribution is given to the respective uploaders. No wallpaper is distributed with our app. If an image violates any copyright,please report it to us and we will remove it from our database.</string>
    <string name="http_imgur_com">http://imgur.com</string>
    <string name="site">Site</string>
    <string name="preview">Preview</string>
    <string name="type">Type</string>
    <string name="format_png">Format png</string>
    <string name="creative_commons_license">Creative Commons License ©</string>
    <string name="wallpapertext">Wallpaper</string>
    <string name="back">Back</string>
    <string name="bannerid">ca-app-pub-3940256099942544/6300978111</string>



    <!-- banner1 ca-app-pub-3399959546059150/3677568165
         banner2 ca-app-pub-3399959546059150/1122545251
         banner3 ca-app-pub-3399959546059150/6793357100
         test banner ca-app-pub-3940256099942544/6300978111 -->
</resources>