<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/shape_3"
    tools:context=".sendfeedback">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape"
        app:srcCompat="@drawable/abc_vector_test" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="287dp"
        android:layout_height="53dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/send_feedback"
        android:textColor="#800000"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135" />


    <EditText
        android:id="@+id/act_main_et_email_address"
        android:layout_width="355dp"
        android:layout_height="53dp"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:inputType="textPersonName"
        android:text="@string/infinitysenseiofficial_gmail_com"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        tools:ignore="TextFields"
        android:autofillHints="anything" />

    <EditText
        android:id="@+id/act_main_et_email_subject"
        android:layout_width="357dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_a_subject"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.359"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/act_main_et_email_body"
        android:layout_width="348dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="@string/type_in_your_message"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.744"
        android:autofillHints=""
        tools:ignore="TextFields" />



    <Button
        android:id="@+id/act_main_bt_send_email_button"
        android:layout_width="354dp"
        android:layout_height="50dp"
        android:backgroundTint="#00DDFF"
        android:text="@string/send_mail"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />


</androidx.appcompat.widget.LinearLayoutCompat>